@@ -50,15 +50,16 @@ import org.sonar.iac.common.api.tree.impl.TextPointer;
 import org.sonar.iac.common.api.tree.impl.TextRange;
 import org.sonar.iac.common.api.tree.impl.TextRanges;
 import org.sonar.iac.common.extension.TreeParser;
+import org.sonar.iac.common.extension.visitors.InputFileContext;
 import org.sonar.iac.common.extension.visitors.TreeContext;
 import org.sonar.iac.common.extension.visitors.TreeVisitor;
 import org.sonarsource.analyzer.commons.checks.verifier.SingleFileVerifier;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 
-public final class Verifier {
+public class Verifier {
 
-  private Verifier() {
+  protected Verifier() {
     // utility class
   }
 
@@ -132,31 +133,29 @@ public final class Verifier {
     compare(actualIssues, Collections.emptyList());
   }
 
-  private static List<Issue> runAnalysis(TestContext ctx, IacCheck check, Tree root) {
+  protected static List<Issue> runAnalysis(TestContext ctx, IacCheck check, Tree root) {
     check.initialize(ctx);
     ctx.scan(root);
     return ctx.raisedIssues;
   }
 
   public static Tree parse(TreeParser<Tree> parser, Path path) {
-    String testFileContent = readFile(path);
-    return parser.parse(testFileContent, null);
+    var testFileContent = readFile(path);
+    return parse(parser, testFileContent, null);
+  }
+
+  public static Tree parse(TreeParser<Tree> parser, String content, @Nullable InputFileContext inputFileContext) {
+    return parser.parse(content, inputFileContext);
   }
 
   private static SingleFileVerifier createVerifier(Path path, Tree root) {
-    SingleFileVerifier verifier = SingleFileVerifier.create(path, UTF_8);
-    Map<Integer, Set<Comment>> commentsByLine = new HashMap<>();
-    final Set<TextRange> alreadyAdded = new HashSet<>();
-    (new TreeVisitor<>())
-      .register(Tree.class, (ctx, tree) -> {
-        if (tree instanceof HasComments && !alreadyAdded.contains(tree.textRange())) {
-          for (Comment comment : ((HasComments) tree).comments()) {
-            commentsByLine.computeIfAbsent(comment.textRange().start().line(), i -> new HashSet<>()).add(comment);
-          }
-          alreadyAdded.add(tree.textRange());
-        }
+    return createVerifier(path, root, commentsVisitor());
+  }
 
-      }).scan(new TreeContext(), root);
+  protected static SingleFileVerifier createVerifier(Path path, Tree root, BiConsumer<Tree, Map<Integer, Set<Comment>>> commentsVisitor) {
+    var verifier = SingleFileVerifier.create(path, UTF_8);
+    Map<Integer, Set<Comment>> commentsByLine = new HashMap<>();
+    commentsVisitor.accept(root, commentsByLine);
 
     commentsByLine.entrySet().stream().sorted(Map.Entry.comparingByKey()).map(Map.Entry::getValue)
       .forEach(comments -> comments.forEach(comment -> {
@@ -167,9 +166,22 @@ public final class Verifier {
     return verifier;
   }
 
+  private static BiConsumer<Tree, Map<Integer, Set<Comment>>> commentsVisitor() {
+    Set<TextRange> alreadyAdded = new HashSet<>();
+    return (root, commentsByLine) -> (new TreeVisitor<>()).register(Tree.class,
+      (ctx, tree) -> {
+        if (tree instanceof HasComments && !alreadyAdded.contains(tree.textRange())) {
+          for (Comment comment : ((HasComments) tree).comments()) {
+            commentsByLine.computeIfAbsent(comment.textRange().start().line(), i -> new HashSet<>()).add(comment);
+          }
+          alreadyAdded.add(tree.textRange());
+        }
+      }).scan(new TreeContext(), root);
+  }
+
   private static String readFile(Path path) {
     try {
-      return new String(Files.readAllBytes(path), UTF_8);
+      return Files.readString(path);
     } catch (IOException e) {
       throw new IllegalStateException("Cannot read " + path, e);
     }
